--- a/cgolad/src/gameview.html
+++ b/cgolad/src/gameview.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="gameviewstyle.css">
         <title>Conway's Game of Life and Death</title>
     </head>
     <body>
-
+        <div id='grid-container'></div>
     </body>
+    <script src='basicgame.js'></script>
 </html>
