Update for two players and start model-view binding

--- a/cgolad/src/gameview.html
+++ b/cgolad/src/gameview.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id='grid-container'></div>
+        <button id='next-player'>Next Player</button>
     </body>
     <script src='basicgame.js'></script>
 </html>
